syntax = "proto3";

option csharp_namespace = "AuthRequest";

package auth;

service AuthService {
  rpc Login (LoginData) returns (TokenData);
}

message LoginData {
  string email1 = 1;
  string password = 2;
}

message TokenData {
  string token1 = 1;
}